# ormcamp-todo-api

./: .gitignore  README.md  pyproject.toml
src/app/: settings.py  urls.py
src/todo/: apis.py  models.py  schemas.py  serializers.py  services.py  urls.py  views.py
